Step 6: Add DataDog monitoring

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -3,3 +3,5 @@ REDMINE_DB_USERNAME={{ redmine_db_username }}
 REDMINE_DB_PASSWORD={{ redmine_db_password }}
 REDMINE_DB_DATABASE={{ redmibe_db_database }}
 REDMINE_DB_PORT={{ redmibe_db_port }}
+datadog_api_key={{ datadog_api_key }}
+datadog_site={{ datadog_site }}
